--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.3"
+  compileSdkVersion 27
 
   defaultConfig {
     applicationId "com.hardsoftstudio.rxflux.sample"
     minSdkVersion 15
-    targetSdkVersion 23
+    targetSdkVersion 27
     versionCode 2
     versionName "1.1"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -44,19 +43,21 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
 
   //----- Support Libs
-  compile 'com.android.support:appcompat-v7:23.3.0'
-  compile "com.android.support:design:23.3.0"
-  compile "com.android.support:recyclerview-v7:23.3.0"
-  compile "com.android.support:cardview-v7:23.3.0"
+  compile "com.android.support:appcompat-v7:27.0.2"
+  compile "com.android.support:design:27.0.2"
+  compile "com.android.support:recyclerview-v7:27.0.2"
+  compile "com.android.support:cardview-v7:27.0.2"
 
   //----- Retrofit
-  compile "com.squareup.retrofit2:retrofit:2.0.2"
-  compile "com.squareup.retrofit2:converter-gson:2.0.2"
-  compile "com.squareup.retrofit2:adapter-rxjava:2.0.2"
-  compile 'com.squareup.okhttp3:logging-interceptor:3.0.0-RC1'
+  compile "com.squareup.retrofit2:retrofit:2.3.0"
+  compile "com.squareup.retrofit2:converter-gson:2.3.0"
+  compile "com.squareup.retrofit2:adapter-rxjava:2.3.0"
+  compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
   //---- Butterknife
-  compile 'com.jakewharton:butterknife:7.0.0'
+  //ButterKnife
+  compile 'com.jakewharton:butterknife:8.8.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
   compile project(':rxflux')
 
